<resources>
    <string name="app_name">Creepstagram</string>
    <string name="screenshot_notification_title">Screenshot saved</string>
    <string name="screenshot_notification_subtitle">Tap to view your screenshot</string>
    <string name="running_service_notification_title">Creepstagram is running</string>
    <string name="running_service_notification_subtitle">Tap here to stop the service</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="screenshot_alt">screenshot</string>
    <string name="bitmap_error">Ops, something went wrong… Please try again.</string>
    <string name="action_saving">Saving screenshot…</string>
    <string name="screenshot_saved">Screenshot saved</string>
    <string name="shortcut_label">Show controllers</string>
    <string name="bitmap_not_saved">Screenshot not saved.</string>
    <string name="tile_title">Take a Screenshot</string>
    <string name="ask_overlay_title">Welcome aboard</string>
    <string name="ask_overlay_subtitle">Before you begin, please allow the application to show the controls above the other apps.</string>
    <string name="main_page_title">Ready to go</string>
    <string name="main_page_subtitle">Show application controllers to save and share anything you want without being caught.</string>
    <string name="ask_overlay_button_request">Grant Permission</string>
</resources>
