<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tommasoberlose.creepstagram.ui.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/name"
            android:textColor="@color/colorAccent"
            android:text="@string/app_name"
            android:textSize="40sp"/>
    </RelativeLayout>
    <com.github.florent37.diagonallayout.DiagonalLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:elevation="0dp"
        app:diagonal_angle="10"
        app:diagonal_position="top"
        app:diagonal_direction="left">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_bg"
            android:background="@drawable/gradient_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="32dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/main_title"
                    android:textColor="@android:color/white"
                    android:text="@string/ask_overlay_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18sp"
                    android:alpha="0.8"
                    android:id="@+id/main_subtitle"
                    android:textColor="@android:color/white"
                    android:text="@string/ask_overlay_subtitle"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceButton"
                        android:textColor="@android:color/white"
                        android:layout_gravity="end"
                        android:layout_marginTop="32dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/ask_overlay_button_request"
                        android:id="@+id/action_request_permission"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp"
                        android:background="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:id="@+id/footer_logo"
                android:src="@mipmap/ic_shortcut_foreground"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </com.github.florent37.diagonallayout.DiagonalLayout>
</LinearLayout>
