<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:fitsSystemWindows="false"
    tools:context="com.tommasoberlose.creepstagram.ui.ScreenshotActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:fitsSystemWindows="false"
        android:background="@color/overlay_background"
        android:alpha="0">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_above="@+id/actions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp">
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardPreventCornerOverlap="true">
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/screenshot_alt"
                        android:id="@+id/screenshot"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/actions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:id="@+id/action_delete"
                    android:padding="8dp"
                    android:contentDescription="@string/action_delete"
                    android:src="@drawable/ic_action_delete"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:id="@+id/action_save"
                    android:contentDescription="@string/action_save"
                    android:src="@drawable/ic_action_download"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:id="@+id/action_share"
                    android:contentDescription="@string/action_share"
                    android:src="@drawable/ic_action_share"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
